# street_manta

./: .gitignore  .gitmodules  Jenkinsfile  README.md  dev_setup.sh  docker-compose.traefik.yml  docker-compose.yml  docker_build.sh  dockerfile  start_dev_server.sh  start_treafik.sh
backend/: .gitignore  create_db.sh  dev_server.sh  pyproject.toml  requirements.txt  test.sh
backend/app/: authentication.py  globals.py  optimize.py  server.py  utils.py
backend/app/data/: db_interface.py  models.py
backend/app/protobufs/: geo_capture_pb2.py  sensors_pb2.py
backend/app/tools/: create_db.py
backend/src/street_manta/: authentication.py  globals.py  ros.py  server.py  utils.py  video.py
backend/src/street_manta/data/: db_interface.py  models.py  schemas.py  storage_interface.py
backend/src/street_manta/protobufs/: geo_capture_pb2.py
backend/src/street_manta/tools/: create_db.py
backend/src/tests/api/: test_geocapture_creation_and_retrieval.py  test_geophot_creation_and_retrieval.py
backend/tests/api/: test_geocapture_creation_and_retrieval.py  test_geophot_creation_and_retrieval.py
backend/tests/test_utils/: photo.py  video.py
frontend/: .gitignore  README.md  pubspec.yaml
frontend/android/: build.gradle
frontend/app/: globals.dart  main.dart
frontend/lib/: constants.dart  globals.dart  main.dart
frontend/linux/: CMakeLists.txt  my_application.cc
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
protobufs/: generate_protobufs.sh  geo_capture.proto  sensors.proto
(+77 files in other folders)
