[project]
name = "street_manta"
version = "0.0.1"
dependencies = [
    "fastapi[standard]",
    "networkx",
    "uvicorn",
    "SQLAlchemy",
    "fs",
    "pytest",
    "numpy",
    "opencv-python",
    "httpx",
    "python-multipart",
    "protobuf",
    "rosbags",
    "scipy",
    "universal-pathlib>=0.2.6",
    "ffmpeg-python>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"